@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Anton Zinoviev <zinoviev@debian.org>, Christian Perrier <bubulle@debian.org>
 Build-Depends-Indep: perl, libxml-parser-perl, xkb-data (>= 0.9), locales-all
-Build-Depends: debhelper (>= 5), po-debconf
+Build-Depends: debhelper (>= 7), po-debconf
 Standards-Version: 3.8.3
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/console-setup
 
