@@ -19,6 +19,8 @@ console-setup (1.45) UNRELEASED; urgency=low
   * Update Standards to 3.8.3 (checked, no change)
   * Reformat extended description of bdf2psf to avoid exceeding 80
     columns
+  * Bump debhelper compatibility to 7
+  * Use dh_prep in place of deprecated "dh_clean -k"
 
  -- Anton Zinoviev <zinoviev@debian.org>  Sun, 12 Jul 2009 15:12:31 +0300
 
